--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body{
 
 .start-page{
     margin-top:120px;
-    margin-left: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
@@ -28,10 +30,7 @@ body{
     text-align: center;
     color: #293264;
     
-    margin-left: 70px;
     margin-bottom: 0;
-    
-
     
 }
 
@@ -49,8 +48,11 @@ body{
     color: #293264;
     
     margin-left: 115px;
+    margin-left: 0px;
     margin-top: 7px;
     margin-bottom: 30px;
+
+
     
 
 }
@@ -75,8 +77,9 @@ body{
     border-radius: 15px;
     border: none;
     
-    
-    margin-left: 180px;
+
+
+
 }
 
 
@@ -102,6 +105,8 @@ body{
 
 .answers{
     display: flex;
+    align-items: center;
+
 }
 .possible-answer{
     /* margin-right: 5px; */
@@ -141,7 +146,6 @@ body{
     padding-bottom: 3px;
 }
 .not-clicked-answer{
-    /* margin-right: 5px; */
     text-align: center;
     border:1px solid black;
     border-radius: 7px;
@@ -150,6 +154,10 @@ body{
     padding-right: 20px;
     padding-top: 3px;
     padding-bottom: 3px;
+    max-width: 80px;
+    word-wrap:break-word;
+    cursor: pointer;
+
 }
 .submit-play-btn{
     font-family: 'Inter';
